# suwi

./: Cargo.toml
assets/: style.css
migrations/: 20231228191317_create_accounts.sql  20231229210655_add_mfa.sql
scripts/: start_db.sh  stop_db.sh
src/: accounts.rs  configuration.rs  lib.rs  main.rs  web.rs
src/accounts/: mfa.rs
src/web/: accounts.rs  mfa.rs
